Bug 1482289 - Enlarge index buffer validation cache size to handle CAD workloads. - r=kvark a=lizzard MozReview-Commit-ID: 8DF3o4mLYZ6